<resources>
    <string name="app_name">TaskApp</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_pasword">Confirm pasword</string>
    <string name="button">Button</string>
    <string name="Login">login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="home">Home</string>
    <string name="splash">SPLASH</string>
    <string name="registers">regs</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="update">update</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_new_password">Enter new password</string>
</resources>
